stop auto zoom when typing in filter field on iPhone, without disableing zoom

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,10 @@ address > a {
     left: 0;
 }
 
+#filter-text {
+    font-size: 16px;
+}
+
 #clear-filter {
     position: absolute;
     right: 8px;
